# shakshuka-1

./: .env  README.md  next.config.ts  package-lock.json  package.json
.data/: tasks.json
drizzle/: 0000_conscious_red_shift.sql
drizzle/meta/: 0000_snapshot.json  _journal.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/counters/: route.ts
src/app/api/settings/: route.ts
src/app/api/tasks/: route.ts
src/app/dashboard/: page.tsx
src/app/planner/: page.tsx
src/app/reports/: page.tsx
src/app/settings/: page.tsx
src/components/: ColorCustomizer.tsx  ThemeProvider.tsx
src/components/planner/: PlannerClient.tsx
src/components/tasks/: Tasks.tsx
src/components/tauri/: AutoStartInit.tsx
src/components/ui/: button.tsx  chart.tsx
src/components/widgets/: Counters.tsx  PomodoroTimer.tsx
src/db/: schema.ts
src/db/seeds/: categories.ts  settings.ts  tasks.ts  users.ts
src/hooks/: useKeyboardShortcuts.ts
src/lib/: auth.ts  completion-messages.ts  greetings.ts  local-storage.ts  quirky-nicknames.ts
